--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,7 +14,11 @@ file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false test.*.cpp)
 add_executable(${TEST_NAME} ${TEST_SOURCES})
 add_test(${TEST_NAME} ${TEST_NAME}) # for ctest
 
-target_link_libraries(${TEST_NAME} pthread #[[fmt::fmt]])
+## Compiler options
+include(../cmake/CompilerOptions.cmake)
+set_project_options(${TEST_NAME})
+
+#target_link_libraries(${TEST_NAME} PRIVATE #[[fmt::fmt]])
 target_compile_features(${TEST_NAME} PUBLIC cxx_std_17)
 target_compile_options(${TEST_NAME} INTERFACE ${PROJECT_OPTIONS})
 #target_include_directories(${TEST_NAME} PRIVATE ${Catch2_INCLUDE_DIRS} ../include)
