--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,24 +1,20 @@
 set(TEST_NAME ${PROJECT_NAME}_AllTests)
 
-#add_definitions(-DGTEST_LANGUAGE_CXX11) # for gtest
-
 file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false test.*.cpp)
-
-#
-#find_package(Catch2 REQUIRED)
-#
-#if (Catch2_FOUND)
-#  message("Catch2 found: ${Catch2_INCLUDE_DIRS}")
-#endif ()
 
 add_executable(${TEST_NAME} ${TEST_SOURCES})
 add_test(${TEST_NAME} ${TEST_NAME}) # for ctest
+#add_definitions(-DGTEST_LANGUAGE_CXX11) # for gtest
 
 ## Compiler options
 include(../cmake/CompilerOptions.cmake)
 set_project_options(${TEST_NAME})
 
-#target_link_libraries(${TEST_NAME} PRIVATE #[[fmt::fmt]])
+## Find third-party packages
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_BINARY_DIR})
+find_package(fmt REQUIRED)
+find_package(Catch2 REQUIRED)
+
+target_link_libraries(${TEST_NAME} PRIVATE fmt::fmt)
 target_compile_features(${TEST_NAME} PUBLIC cxx_std_17)
-target_compile_options(${TEST_NAME} INTERFACE ${PROJECT_OPTIONS})
-#target_include_directories(${TEST_NAME} PRIVATE ${Catch2_INCLUDE_DIRS} ../include)
+target_include_directories(${TEST_NAME} PRIVATE ${Catch2_INCLUDE_DIRS} ../include)
