--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           # ubuntu-latest-clang-11,
 #           windows-2016-cl,
 #           windows-2019-cl,
-          macOS-latest-xcode-11.3,
+#          macOS-latest-xcode-11.3,
         ]
 
         include:
@@ -68,7 +68,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-    - name: Create Build Environment
+      - name: Create Build Environment
         # Some projects don't allow in-source building, so create a separate build directory
         # We'll use this as our working directory for all subsequent commands
         run: cmake -E make_directory ${{runner.workspace}}/build
