--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,8 @@ install:
 #  - pip3 install --user ninja
   - pip install --user conan
 #  - pip3 install --user conan
-  - conan user
+  - python.exe -m pip install --upgrade pip
+#  - conan user
 
 before_build:
 - cmd: >-
