--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -10,9 +10,9 @@ jobs:
         # windows-2016 and windows-2019 have MSVC 2017 and 2019 installed
         # respectively: https://github.com/actions/virtual-environments.
         os: [windows-2016, windows-2019]
-        platform: [Win32, x64]
-        build_type: [Debug, Release]
-        standard: [11, 17, 20]
+        platform: [Win32]
+        build_type: [Debug]
+        standard: [17]
         include:
           - os: windows-2016
             platform: Win32
@@ -40,24 +40,20 @@ jobs:
           choco install conan --params="'/AddToPath:1'"
           RefreshEnv.cmd
 
-      - name: Create Build Environment
-        run: cmake -E make_directory ${{runner.workspace}}/build
-
       - name: Configure
         # Use a bash shell for $GITHUB_WORKSPACE.
         shell: bash
         working-directory: ${{runner.workspace}}/build
         run: |
-          conan install ..
           cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}} ${{matrix.shared}} \
                 -A ${{matrix.platform}} \
                 -DCMAKE_CXX_STANDARD=${{matrix.standard}} \
-                -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=True $GITHUB_WORKSPACE
+                -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=False $GITHUB_WORKSPACE
 
       - name: Build
         working-directory: ${{runner.workspace}}/build
         run: cmake --build . --config ${{matrix.build_type}}
 
-      - name: Test
-        working-directory: ${{runner.workspace}}/build
-        run: ctest -C ${{matrix.build_type}}
+#      - name: Test
+#        working-directory: ${{runner.workspace}}/build
+#        run: ctest -C ${{matrix.build_type}}
