--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -12,14 +12,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install and configure Conan
+        run: |
+          brew install conan
+          conan user
+
       - name: Create Build Environment
         run: |
           cmake -E make_directory ${{runner.workspace}}/build
-          brew install conan
 
       - name: Configure
         working-directory: ${{runner.workspace}}/build
         run: |
+          pwd
+          ls
+          ls ..
           cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
                 -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=False \
                 -DENABLE_COVERAGE=False $GITHUB_WORKSPACE
