--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -18,7 +18,11 @@ jobs:
       - name: Install and configure Conan
         run: |
           pip3 install conan
+          conan profile list
+          conan profile new default --detect
+          conan profile update settings.compiler.libcxx=libstdc++11 default
           conan profile show default
+
 
       - name: Create Build Environment
         run: |
