--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -15,7 +15,11 @@ jobs:
       - name: Install and configure Conan
         run: |
           brew install conan
+          conan profile list
+          conan profile new default --detect
+          conan profile update settings.compiler.libcxx=libstdc++11 default
           conan profile show default
+
 
       - name: Create Build Environment
         run: |
