--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -26,7 +26,12 @@ jobs:
         # Use a bash shell for $GITHUB_WORKSPACE.
 #        shell: bash
 #        working-directory: ${{runner.workspace}}/build
-        run: conan profile show default
+        run: |
+          conan profile list
+          conan profile new default --detect
+          conan profile update settings.compiler.libcxx=libstdc++11 default
+          conan profile show default
+
 
       - name: Create Build Environment
         run: cmake -E make_directory ${{runner.workspace}}/build
