--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,10 +8,12 @@ install:
 
 before_build:
 - cmd: RefreshEnv.cmd
+- conan profile list
+- conan profile new default --detect
+- conan profile update settings.compiler.libcxx=libstdc++11 default
 - conan profile show default
 - mkdir build
 - cd build
-- conan profile update settings.compiler.libcxx=libstdc++11 default
 - conan install ..
 
 build_script:
