--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,26 +23,21 @@ jobs:
           RefreshEnv.cmd
 
       - name: Check conan
-        # Use a bash shell for $GITHUB_WORKSPACE.
-#        shell: bash
-#        working-directory: ${{runner.workspace}}/build
+        shell: bash
         run: |
           conan profile list
           conan profile new default --detect
           conan profile show default
 
-
       - name: Create Build Environment
         run: cmake -E make_directory ${{runner.workspace}}/build
 
       - name: Install third-party packages
-        # Use a bash shell for $GITHUB_WORKSPACE.
         shell: bash
         working-directory: ${{runner.workspace}}/build
         run: conan install $GITHUB_WORKSPACE
 
       - name: Configure
-        # Use a bash shell for $GITHUB_WORKSPACE.
         shell: bash
         working-directory: ${{runner.workspace}}/build
         run: |
