--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -46,6 +46,11 @@ jobs:
         working-directory: ${{runner.workspace}}/build
         run: cmake --build . --config ${{matrix.build_type}}
 
-#      - name: Test
-#        working-directory: ${{runner.workspace}}/build
-#        run: ctest -C ${{matrix.build_type}}
+      - name: Test
+        working-directory: ${{runner.workspace}}/build
+        run: ctest -C ${{matrix.build_type}}
+
+      - name: Coverage
+        shell: bash
+        working-directory: ${{runner.workspace}}/build
+        run: bash <(curl -s https://codecov.io/bash)
