--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -32,13 +32,13 @@ jobs:
         working-directory: ${{runner.workspace}}/build
         run: |
           cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
-                -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=False \
+                -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=True \
                 -DENABLE_COVERAGE=False $GITHUB_WORKSPACE
 
       - name: Build
         working-directory: ${{runner.workspace}}/build
         run: cmake --build . --config ${{matrix.build_type}}
 
-#      - name: Test
-#        working-directory: ${{runner.workspace}}/build
-#        run: ctest -C ${{matrix.build_type}}
+      - name: Test
+        working-directory: ${{runner.workspace}}/build
+        run: ctest -C ${{matrix.build_type}}
