--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -22,36 +22,33 @@ jobs:
           choco install conan --params="'/AddToPath:1'"
           RefreshEnv.cmd
 
-      - name: Check conan
+# TODO validate how to use conan. Is it added to PATH?
+#      - name: Check conan
 #        shell: bash
-        run: |
-          RefreshEnv.cmd
-
-          conan profile list
-
-          conan profile new default --detect
-
-          conan profile show default
-
-      - name: Create Build Environment
-        run: cmake -E make_directory ${{runner.workspace}}/build
-
-      - name: Install third-party packages
-        shell: bash
-        working-directory: ${{runner.workspace}}/build
-        run: conan install $GITHUB_WORKSPACE
-
-      - name: Configure
-        shell: bash
-        working-directory: ${{runner.workspace}}/build
-        run: |
-          cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
-                -A ${{matrix.platform}} \
-                -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=False $GITHUB_WORKSPACE
-
-      - name: Build
-        working-directory: ${{runner.workspace}}/build
-        run: cmake --build . --config ${{matrix.build_type}}
+#        run: |
+#          conan profile list
+#          conan profile new default --detect
+#          conan profile show default
+#
+#      - name: Create Build Environment
+#        run: cmake -E make_directory ${{runner.workspace}}/build
+#
+#      - name: Install third-party packages
+#        shell: bash
+#        working-directory: ${{runner.workspace}}/build
+#        run: conan install $GITHUB_WORKSPACE
+#
+#      - name: Configure
+#        shell: bash
+#        working-directory: ${{runner.workspace}}/build
+#        run: |
+#          cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
+#                -A ${{matrix.platform}} \
+#                -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=False $GITHUB_WORKSPACE
+#
+#      - name: Build
+#        working-directory: ${{runner.workspace}}/build
+#        run: cmake --build . --config ${{matrix.build_type}}
 
 #      - name: Test
 #        working-directory: ${{runner.workspace}}/build
