set conan build type to Debug in windows build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,11 +13,11 @@ before_build:
 - conan profile show default
 - mkdir build
 - cd build
-- conan install ..
+- conan install .. -s build_type=Debug
 
 build_script:
 - cmd: >-
-    cmake -DCMAKE_MODULE_PATH=%CD:\=/% -DENABLE_TESTS=True -DCMAKE_BUILD_TYPE=Release c:\projects\source
+    cmake -DCMAKE_MODULE_PATH=%CD:\=/% -DENABLE_TESTS=True c:\projects\source
 
     cmake --build .
 
