add other test case

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -29,8 +29,7 @@ jobs:
           conan profile show default
 
       - name: Create Build Environment
-        run: |
-          cmake -E make_directory ${{runner.workspace}}/build
+        run: cmake -E make_directory ${{runner.workspace}}/build
 
       - name: Install third-party packages
         shell: bash
